[package]
name = "telegram-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
isahc = {version="1.7.2", features=["json"]}
log = "0.4.20"
serde_json = "1.0.105"
smol = "1.3.0"
smol-timeout = "0.6.0"
smolscale = "0.4"